--- a/node/login-lecture/app/src/views/home/login.ejs
+++ b/node/login-lecture/app/src/views/home/login.ejs
@@ -4,13 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script src ="/js/home/login.js" defer></script> <!-- defer: 스크립트를 비동기적으로 로드하고, HTML 파싱이 완료된 후 실행 -->
+    <link rel="stylesheet" href="/css/home/login.css" />
+    <!-- css 파일을 불러옴 -->
+    <script src="/js/home/login.js" defer></script>
+    <!-- defer: 스크립트를 비동기적으로 로드하고, HTML 파싱이 완료된 후 실행 -->
 
     <title>Document</title>
   </head>
   <body>
-    <input id = "id" type="text" placeholder="아이디" /><br />
-    <input id = "password" type="text" placeholder="비밀번호" /><br />
-    <button>로그인</button>
+    <div class="login-page">
+      <div class="form">
+        <form class="login-form">
+          <input id="id" type="text" placeholder="아이디" />
+          <input id="password" type="password" placeholder="비밀번호" />
+          <button>login</button>
+          <p class="message">
+            Not registered? <a href="#">Create an account</a>
+          </p>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
+
+<!--Copyright (c) 2025 by Aigars Silkalns (https://codepen.io/colorlib/pen/rxddKy)-->
