--- a/node/login-lecture/app/src/views/home/register.ejs
+++ b/node/login-lecture/app/src/views/home/register.ejs
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="/css/home/login.css" />
     <!-- css 파일을 불러옴 -->
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
     <!-- defer: 스크립트를 비동기적으로 로드하고, HTML 파싱이 완료된 후 실행 -->
 
     <title>Document</title>
@@ -19,7 +19,7 @@
           <input id="name" type="text" placeholder="이름" />
           <input id="password" type="password" placeholder="비밀번호" />
           <input id="confirm-password" type="password" placeholder="비밀번호 확인" />
-          <button>SIGN UP</button>
+          <p id = "button">SIGN UP</p>
           <p class="message">Already register? <a href="/login">Create an account</a>
           </p>
         </form>
